# JIT

./: .travis.yml  CMakeLists.txt  README.md  build.sh
cmake/: Packages.cmake
cmake/macros/: Private.cmake  Public.cmake
cmake/modules/: FindClang.cmake
jit/: CMakeLists.txt  jit.cpp  jit.h
lib/: CMakeLists.txt
lib/jit/: jit.h
program/: CMakeLists.txt
program/JITCompileAndRun/: CMakeLists.txt  main.cpp
src/findNamedClass/: CMakeLists.txt  main.cpp
src/simpleJit/: CMakeLists.txt  cxxCompileLayer.h  jit.cpp  jit.h
src/simpleJitCompiler/: CMakeLists.txt  main.cpp
